# ai-almanac-web

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT.md  README.md  docker-compose.yml
.github/workflows/: backend.yml  frontend.yml
backend/: .dockerignore  .env.example  Dockerfile  almanac.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_indexes.py  0003_add_metrics_cache.py  0004_add_chat_sessions.py  0005_chat_transcript_and_scope.py
backend/app/: auth.py  config.py  database.py  main.py
backend/app/config/: datasets.yaml  models.yaml  romp.yaml
backend/app/routers/: chat.py  config.py  datasets.py  jobs.py  regions.py
backend/app/services/: chat_artifacts.py  chat_state.py  docker_runner.py  llm.py  logging.py  metrics.py  runner.py  storage.py
backend/tests/: conftest.py  test_chat_api.py
docker/romp-wrapper/: Dockerfile  entrypoint.sh
modal/: app.py
scripts/: generate_test_data.py  upload-data.sh
terraform/: artifact_registry.tf  backend.hcl.example  backend.tf  batch.tf  cloud_run.tf  database.tf  iam.tf  secrets.tf  storage.tf  terraform.tfvars.example  variables.tf
testdata/ethiopia/fuxi/: 1998.nc  1999.nc  2000.nc
testdata/ethiopia/obs/: 1998.nc  1999.nc  2000.nc
web/: .env.example  Dockerfile  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
web/src/lib/: Footer.svelte  LoginPrompt.svelte  Nav.svelte  api.ts  auth-store.ts  auth.ts  benchmarks.svelte.ts  result-parser.ts
web/src/lib/components/: ChatPanel.svelte  ComparisonPanel.svelte  FigureCard.svelte  FigureLightbox.svelte  GridCellInspector.svelte  GridCellModelCard.svelte  JobLogs.svelte  MaeSeriesChart.svelte  (+4 more)
web/src/routes/: +layout.svelte  +page.svelte  MainContent.svelte  layout.css
web/tests/: api.test.ts  chat-panel.test.ts  setup.ts
(+11 files in other folders)
